2010-10-10 Borut Razem <borut.razem AT siol.net>

	* index.php:
	  added News - sdcc 3.0.0 RC1, removed old sdcc 2.9.0 release news
	* previous.php: added old news

2010-09-12 Borut Razem <borut.razem AT siol.net>

	* snap.php: do not sort by the date: files are already sorted
	* index.php: sdas and sdld instead asxxxx, reformatted, ...
	* left_menu.inc: corrected html format

2010-08-22 Borut Razem <borut.razem AT siol.net>

	* snap.php: update file size and date

2010-08-21 Borut Razem <borut.razem AT siol.net>

	* snap.php: snapshot files moved to SourceForge FRS

2010-05-24 Borut Razem <borut.razem AT siol.net>

	* left_menu.inc: fixed bug 2938514: "Documentation" link leads to
	  error page

2009-12-19 Borut Razem <borut.razem AT siol.net>

	* images/18dot5a.gif, snap.php:
	  added icon a bue star icon (18dot5a.gif),
	  downloaded from http://bibcyt.ucla.edu.ve/alexandr/ICONOS/,
	  I can't find the original icon archive any more:-(,
	  ChangeLog icon changed to 18dot5a.gif

2009-11-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* left_menu.inc: updated link to the forum

2009-09-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* links.php: removed sensorella as requested in webdoc 2854390,
	  updated other apparent dead or unrelated links, to be removed later,
	  added links for asxxxx, gputils and turbo51 (webdoc 2002629)

2009-05-09 Borut Razem <borut.razem AT siol.net>

	* index.php: implemented FRE #2786753: Remove Borland C support

2009-03-22 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 2.9.0 release

2009-03-15 Borut Razem <borut.razem AT siol.net>

	* index.php:
	  added News - sdcc 2.9.0 RC2, removed old sdcc 2.8.0 release news
	* previous.php: added old news

2009-03-01 Borut Razem <borut.razem AT siol.net>

	* index.php: sdcc asxxxx under GPL, added News - sdcc 2.9.0 RC1

2009-02-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* left_menu.inc: updated left menu with a link to the forum
