@@ -1,3 +1,9 @@
+2010-10-23 Borut Razem <borut.razem AT siol.net>
+
+	* index.php:
+	  added News - sdcc 3.0.0 RC2
+	* previous.php: added old news
+
 2010-10-10 Borut Razem <borut.razem AT siol.net>
 
 	* index.php:
